--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,11 +1,11 @@
 ---
 ---
 
-@string{cvpr = {{IEEE/CVF} Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>),}}
-@string{iccv = {{IEEE/CVF} International Conference on Computer Vision (<b>ICCV</b>),}}
-@string{iccvw = {{IEEE/CVF} International Conference on Computer Vision Workshop (<b>ICCVW</b>),}}
-@string{eccv = {European Conference on Computer Vision (<b>ECCV</b>),}}
-@string{neurips = {Conference on Neural Information Processing Systems (<b>NeurIPS</b>),}}
+@string{cvpr = {{IEEE/CVF} Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>)}}
+@string{iccv = {{IEEE/CVF} International Conference on Computer Vision (<b>ICCV</b>)}}
+@string{iccvw = {{IEEE/CVF} International Conference on Computer Vision Workshop (<b>ICCVW</b>)}}
+@string{eccv = {European Conference on Computer Vision (<b>ECCV</b>)}}
+@string{neurips = {Conference on Neural Information Processing Systems (<b>NeurIPS</b>)}}
 
 
 @inproceedings{Yang_2023_ICCVW,
