--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,18 +6,19 @@
 @string{iccvw = {{IEEE/CVF} International Conference on Computer Vision Workshop (<b>ICCVW</b>)}}
 @string{eccv = {European Conference on Computer Vision (<b>ECCV</b>)}}
 @string{neurips = {Conference on Neural Information Processing Systems (<b>NeurIPS</b>)}}
+@string{aaai = {Association for the Advancement of Artificial Intelligence (<b>AAAI</b>)}}
 
-
-@inproceedings{Yang_2023_ICCVW,
+@inproceedings{Yang_2024_AAAI,
   author    = {Hunmin Yang* and Jongoh Jeong* and Kuk-Jin Yoon},
   title     = {FACL-Attack: Frequency-Aware Contrastive Learning for Transferable Adversarial Attacks},
-  abstract  = {Deep neural networks are known to be vulnerable to security risks due to the inherent transferable nature of adversarial examples. Despite the success of recent generative model-based attacks demonstrating strong transferability, it still remains a challenge to design an efficient attack strategy in a real-world strict black-box setting, where both the target domain and model architectures are unknown. In this paper, we seek to explore a feature contrastive approach in the frequency domain to generate adversarial examples that are robust in both cross-domain and cross-model settings. With that goal in mind, we propose two modules that are only employed during the training phase: a FrequencyAware Domain Randomization (FADR) module to randomize domain-variant low- and high-range frequency components and a Frequency-Augmented Contrastive Learning (FACL) module to effectively separate domain-invariant mid-frequency features of clean and perturbed image. We demonstrate strong transferability of our generated adversarial perturbations through extensive cross-domain and cross-model experiments, while keeping the inference time complexity.},
-  booktitle = iccvw,
-  year      = {2023},
-  abbr={ICCVW},
+  abstract  = {Deep neural networks are known to be vulnerable to security risks due to the inherent transferable nature of adversarial examples. Despite the success of recent generative model-based attacks demonstrating strong transferability, it still remains a challenge to design an efficient attack strategy in a real-world strict black-box setting, where both the target domain and model architectures are unknown. In this paper, we seek to explore a feature contrastive approach in the frequency domain to generate adversarial examples that are robust in both cross-domain and cross-model settings. With that goal in mind, we propose two modules that are only employed during the training phase: a Frequency-Aware Domain Randomization (FADR) module to randomize domain-variant low- and high-range frequency components and a Frequency-Augmented Contrastive Learning (FACL) module to effectively separate domain-invariant mid-frequency features of clean and perturbed image. We demonstrate strong transferability of our generated adversarial perturbations through extensive cross-domain and cross-model experiments, while keeping the inference time complexity.},
+  booktitle = aaai,
+  year      = {2024},
+  abbr={AAAI},
   selected={true},
-  website={https://iccv23-arow.github.io/},
-  img_path={assets/img/facl.PNG},
+  website={https://aaai.org/aaai-conference/},
+  additional_info2={ICCV Workshop on Adversarial Robustness in the Real World ([AROW](https://iccv23-arow.github.io/)) 2023},
+  img_path={assets/img/facl.png},
   equal_contrib={true}
 }
 
