--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,6 +8,10 @@
 @string{neurips = {Conference on Neural Information Processing Systems (<b>NeurIPS</b>)}}
 @string{aaai = {Association for the Advancement of Artificial Intelligence (<b>AAAI</b>)}}
 
+@string{gtc = {NVIDIA GPU Technology Conference (<b>GTC</b>)}}
+
+
+# Selected Papers
 @inproceedings{Yang_2024_AAAI,
   author    = {Hunmin Yang* and Jongoh Jeong* and Kuk-Jin Yoon},
   title     = {FACL-Attack: Frequency-Aware Contrastive Learning for Transferable Adversarial Attacks},
@@ -59,4 +63,19 @@
   selected={true},
   website={https://islab-ai.github.io/dta-cvpr2022/},
   img_path={assets/img/dta.png},
+}
+
+
+
+# Others
+@inproceedings{Yang_2023_GTC,
+  author    = {Hunmin Yang and Se-Yoon Oh and Junhyeong Cho},
+  title     = {Synthetic Image Generation for Deep Neural Networks},
+  booktitle = gtc,
+  year      = {2023},
+  abbr={GTC},
+  selected={false},
+  website={https://www.nvidia.com/en-us/on-demand/session/gtcspring23-ps51191/},
+  additional_info={Spotlight Presentation},
+  img_path={assets/img/gtc2023.jpg},
 }
