--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -79,3 +79,26 @@
   additional_info={Spotlight Presentation},
   img_path={assets/img/gtc2023.jpg},
 }
+
+@inproceedings{Yang_2020_GTC,
+  author    = {Hunmin Yang and Se-Yoon Oh and Taewon Kim and Ki-Jung Ryu},
+  title     = {D-GEN: A Deep Learning Data Generation Framework for Artificial Intelligence},
+  booktitle = gtc,
+  year      = {2020},
+  abbr={GTC},
+  selected={false},
+  website={https://www.nvidia.com/gtc/poster-gallery/},
+  img_path={assets/img/gtc2020.jpg},
+}
+
+@inproceedings{Yang_2019_GTC,
+  author    = {Hunmin Yang and Se-Yoon Oh and Ki-Jung Ryu},
+  title     = {Accelerating Distributed Deep Learning Inference on multi-GPU with Hadoop-Spark},
+  booktitle = gtc,
+  year      = {2019},
+  abbr={GTC},
+  selected={false},
+  website={https://www.nvidia.com/en-us/on-demand/session/gtcsiliconvalley2019-s9343/},
+  additional_info={Oral Talk (50min)},
+  img_path={assets/img/gtc2019.jpg},
+}
