--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,6 +9,7 @@
 @string{aaai = {Association for the Advancement of Artificial Intelligence (<b>AAAI</b>)}}
 
 @string{gtc = {NVIDIA GPU Technology Conference (<b>GTC</b>)}}
+@string{iccas = {International Conference on Control, Automation and Systems (<b>ICCAS</b>)}}
 
 
 # Selected Papers
@@ -67,7 +68,7 @@
 
 
 
-# Others
+# GTC
 @inproceedings{Yang_2023_GTC,
   author    = {Hunmin Yang and Se-Yoon Oh and Junhyeong Cho},
   title     = {Synthetic Image Generation for Deep Neural Networks},
@@ -101,4 +102,18 @@
   website={https://www.nvidia.com/en-us/on-demand/session/gtcsiliconvalley2019-s9343/},
   additional_info={Oral Talk (50min)},
   img_path={assets/img/gtc2019.jpg},
+}
+
+
+
+# ICCAS
+@inproceedings{Kim_2021_ICCAS,
+  author    = {Jeonghun Kim and Kyungmin Lee and Hyeongkeun Lee and Hunmin Yang and Se-Yoon Oh},
+  title     = {Camouflaged Adversarial Attack on Object Detector},
+  booktitle = iccas,
+  year      = {2021},
+  abbr={ICCAS},
+  selected={false},
+  website={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9650004},
+  img_path={assets/img/iccas2021.png},
 }
