--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -89,6 +89,7 @@
   abbr={GTC},
   selected={false},
   website={https://www.nvidia.com/gtc/poster-gallery/},
+  additional_info2={Virtual Poster Presentation},
   img_path={assets/img/gtc2020.jpg},
 }
 
@@ -107,6 +108,18 @@
 
 
 # ICCAS
+@inproceedings{Oh_2023_ICCAS,
+  author    = {Se-Yoon Oh and Hunmin Yang},
+  title     = {Simulation of Physical Adversarial Attacks on Vehicle Detection Models},
+  booktitle = iccas,
+  year      = {2023},
+  abbr={ICCAS},
+  selected={false},
+  website={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=10316980},
+  additional_info2={Oral Presentation},
+  img_path={assets/img/iccas2023.png},
+}
+
 @inproceedings{Kim_2021_ICCAS,
   author    = {Jeonghun Kim and Kyungmin Lee and Hyeongkeun Lee and Hunmin Yang and Se-Yoon Oh},
   title     = {Camouflaged Adversarial Attack on Object Detector},
@@ -115,5 +128,6 @@
   abbr={ICCAS},
   selected={false},
   website={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9650004},
+  additional_info2={Virtual Oral Presentation},
   img_path={assets/img/iccas2021.png},
 }
