--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -77,7 +77,7 @@
   abbr={GTC},
   selected={false},
   website={https://www.nvidia.com/en-us/on-demand/session/gtcspring23-ps51191/},
-  additional_info={Spotlight Presentation},
+  additional_info={Spotlight Presentation (Virtual)},
   img_path={assets/img/gtc2023.jpg},
 }
 
@@ -89,7 +89,7 @@
   abbr={GTC},
   selected={false},
   website={https://www.nvidia.com/gtc/poster-gallery/},
-  additional_info2={Virtual Poster Presentation},
+  additional_info2={Poster Presentation (Virtual)},
   img_path={assets/img/gtc2020.jpg},
 }
 
@@ -101,7 +101,7 @@
   abbr={GTC},
   selected={false},
   website={https://www.nvidia.com/en-us/on-demand/session/gtcsiliconvalley2019-s9343/},
-  additional_info={Oral Talk (50min)},
+  additional_info={Oral Presentation (50min)},
   img_path={assets/img/gtc2019.jpg},
 }
 
@@ -116,7 +116,7 @@
   abbr={ICCAS},
   selected={false},
   website={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=10316980},
-  additional_info2={Oral Presentation},
+  additional_info={Oral Presentation},
   img_path={assets/img/iccas2023.png},
 }
 
@@ -128,6 +128,67 @@
   abbr={ICCAS},
   selected={false},
   website={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9650004},
-  additional_info2={Virtual Oral Presentation},
+  additional_info={Oral Presentation (Virtual)},
   img_path={assets/img/iccas2021.png},
 }
+
+@inproceedings{Kim_2021_ICCAS,
+  author    = {Jeonghun Kim and Kyungmin Lee and Hyeongkeun Lee and Hunmin Yang and Se-Yoon Oh},
+  title     = {Camouflaged Adversarial Attack on Object Detector},
+  booktitle = iccas,
+  year      = {2021},
+  abbr={ICCAS},
+  selected={false},
+  website={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9650004},
+  additional_info={Oral Presentation (Virtual)},
+  img_path={assets/img/iccas2021.png},
+}
+
+@inproceedings{Kim_2020_ICCAS,
+  author    = {Eunchong Kim and Kanghyun Park and Hunmin Yang and Se-Yoon Oh},
+  title     = {Training Deep Neural Networks with Synthetic Data for Off-Road Vehicle Detection},
+  booktitle = iccas,
+  year      = {2020},
+  abbr={ICCAS},
+  selected={false},
+  website={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9268430},
+  additional_info={Oral Presentation (Virtual)},
+  img_path={assets/img/iccas2020_training.png},
+}
+
+@inproceedings{Park_2020_ICCAS,
+  author    = {Kanghyun Park and Hyeongkeun Lee and Hunmin Yang and Se-Yoon Oh},
+  title     = {Improving Instance Segmentation using Synthetic Data with Artificial Distractors},
+  booktitle = iccas,
+  year      = {2020},
+  abbr={ICCAS},
+  selected={false},
+  website={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9268390},
+  additional_info={Oral Presentation (Virtual)},
+  img_path={assets/img/iccas2020_improving.png},
+}
+
+@inproceedings{Lee_2020_ICCAS,
+  author    = {Kyungmin Lee and Hunmin Yang and Se-Yoon Oh},
+  title     = {Adversarial training on joint energy based model for robust classification and out-of-distribution detection},
+  booktitle = iccas,
+  year      = {2020},
+  abbr={ICCAS},
+  selected={false},
+  website={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9268406},
+  additional_info={Oral Presentation (Virtual)},
+  img_path={assets/img/iccas2020_adversarial.png},
+}
+
+@inproceedings{Lee2_2020_ICCAS,
+  author    = {Hyeongkeun Lee and Kyungmin Lee and Hunmin Yang and Se-Yoon Oh},
+  title     = {Applying FastPhotoStyle to synthetic data for military vehicle detection},
+  booktitle = iccas,
+  year      = {2020},
+  abbr={ICCAS},
+  selected={false},
+  website={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9268331},
+  additional_info={Oral Presentation (Virtual)},
+  img_path={assets/img/iccas2020_applying.png},
+}
+
