--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -101,7 +101,7 @@
   abbr={GTC},
   selected={false},
   website={https://www.nvidia.com/en-us/on-demand/session/gtcsiliconvalley2019-s9343/},
-  additional_info={Oral Presentation (50min)},
+  additional_info2={Oral Presentation (50min)},
   img_path={assets/img/gtc2019.jpg},
 }
 
@@ -116,7 +116,7 @@
   abbr={ICCAS},
   selected={false},
   website={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=10316980},
-  additional_info={Oral Presentation},
+  additional_info2={Oral Presentation},
   img_path={assets/img/iccas2023.png},
 }
 
@@ -128,19 +128,7 @@
   abbr={ICCAS},
   selected={false},
   website={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9650004},
-  additional_info={Oral Presentation (Virtual)},
-  img_path={assets/img/iccas2021.png},
-}
-
-@inproceedings{Kim_2021_ICCAS,
-  author    = {Jeonghun Kim and Kyungmin Lee and Hyeongkeun Lee and Hunmin Yang and Se-Yoon Oh},
-  title     = {Camouflaged Adversarial Attack on Object Detector},
-  booktitle = iccas,
-  year      = {2021},
-  abbr={ICCAS},
-  selected={false},
-  website={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9650004},
-  additional_info={Oral Presentation (Virtual)},
+  additional_info2={Oral Presentation (Virtual)},
   img_path={assets/img/iccas2021.png},
 }
 
@@ -152,7 +140,7 @@
   abbr={ICCAS},
   selected={false},
   website={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9268430},
-  additional_info={Oral Presentation (Virtual)},
+  additional_info2={Oral Presentation (Virtual)},
   img_path={assets/img/iccas2020_training.png},
 }
 
@@ -164,7 +152,7 @@
   abbr={ICCAS},
   selected={false},
   website={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9268390},
-  additional_info={Oral Presentation (Virtual)},
+  additional_info2={Oral Presentation (Virtual)},
   img_path={assets/img/iccas2020_improving.png},
 }
 
@@ -176,7 +164,7 @@
   abbr={ICCAS},
   selected={false},
   website={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9268406},
-  additional_info={Oral Presentation (Virtual)},
+  additional_info2={Oral Presentation (Virtual)},
   img_path={assets/img/iccas2020_adversarial.png},
 }
 
@@ -188,7 +176,7 @@
   abbr={ICCAS},
   selected={false},
   website={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9268331},
-  additional_info={Oral Presentation (Virtual)},
+  additional_info2={Oral Presentation (Virtual)},
   img_path={assets/img/iccas2020_applying.png},
 }
 
