Update oral talk gtc 2019

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -101,10 +101,9 @@
   abbr={GTC},
   selected={false},
   website={https://www.nvidia.com/en-us/on-demand/session/gtcsiliconvalley2019-s9343/},
-  additional_info2={Oral Presentation (50min)},
+  additional_info={Oral Talk (50min)},
   img_path={assets/img/gtc2019.jpg},
 }
-
 
 
 # ICCAS
