Update GTC 2019 posters

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -105,6 +105,28 @@
   img_path={assets/img/gtc2019.jpg},
 }
 
+@inproceedings{Yang_2019_GTC_Poster,
+  author    = {Hunmin Yang and Ki-Jung Ryu and Se-Yoon Oh},
+  title     = {Scalable Distributed Deep Learning Inference on multi-GPU with Hadoop-Spark},
+  booktitle = gtc,
+  year      = {2019},
+  abbr={GTC},
+  selected={false},
+  website={https://www.nvidia.com/gtc/poster-gallery/},
+  img_path={assets/img/gtc2019_scalable.png},
+}
+
+@inproceedings{Oh_2019_GTC,
+  author    = {Se-Yoon Oh and Hunmin Yang and Ki-Jung Ryu},
+  title     = {Optimal Distributed Inference on Multi-GPU Processing System},
+  booktitle = gtc,
+  year      = {2019},
+  abbr={GTC},
+  selected={false},
+  website={https://www.nvidia.com/gtc/poster-gallery/},
+  img_path={assets/img/gtc2019_optimal.png},
+}
+
 
 # ICCAS
 @inproceedings{Oh_2023_ICCAS,
