--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -22,7 +22,7 @@
   abbr={AAAI},
   selected={true},
   website={https://aaai.org/aaai-conference/},
-  additional_info2={ICCV Workshop on Adversarial Robustness In the Real World (AROW) 2023},
+  additional_info2={Formerly ICCV Workshop on Adversarial Robustness In the Real World (AROW) 2023},
   img_path={assets/img/facl.png},
   equal_contrib={true}
 }
