--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -77,7 +77,7 @@
   abbr={GTC},
   selected={false},
   website={https://www.nvidia.com/en-us/on-demand/session/gtcspring23-ps51191/},
-  additional_info={Spotlight Presentation (Virtual)},
+  additional_info={Spotlight Presentation},
   img_path={assets/img/gtc2023.jpg},
 }
 
@@ -89,7 +89,6 @@
   abbr={GTC},
   selected={false},
   website={https://www.nvidia.com/gtc/poster-gallery/},
-  additional_info2={Poster Presentation (Virtual)},
   img_path={assets/img/gtc2020.jpg},
 }
 
@@ -101,7 +100,7 @@
   abbr={GTC},
   selected={false},
   website={https://www.nvidia.com/en-us/on-demand/session/gtcsiliconvalley2019-s9343/},
-  additional_info={Oral Talk (50min)},
+  additional_info={Oral Presentation},
   img_path={assets/img/gtc2019.jpg},
 }
 
@@ -137,7 +136,6 @@
   abbr={ICCAS},
   selected={false},
   website={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=10316980},
-  additional_info2={Oral Presentation},
   img_path={assets/img/iccas2023.png},
 }
 
@@ -149,7 +147,6 @@
   abbr={ICCAS},
   selected={false},
   website={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9650004},
-  additional_info2={Oral Presentation (Virtual)},
   img_path={assets/img/iccas2021.png},
 }
 
@@ -161,7 +158,6 @@
   abbr={ICCAS},
   selected={false},
   website={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9268430},
-  additional_info2={Oral Presentation (Virtual)},
   img_path={assets/img/iccas2020_training.png},
 }
 
@@ -173,7 +169,6 @@
   abbr={ICCAS},
   selected={false},
   website={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9268390},
-  additional_info2={Oral Presentation (Virtual)},
   img_path={assets/img/iccas2020_improving.png},
 }
 
@@ -185,7 +180,6 @@
   abbr={ICCAS},
   selected={false},
   website={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9268406},
-  additional_info2={Oral Presentation (Virtual)},
   img_path={assets/img/iccas2020_adversarial.png},
 }
 
@@ -197,7 +191,6 @@
   abbr={ICCAS},
   selected={false},
   website={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9268331},
-  additional_info2={Oral Presentation (Virtual)},
   img_path={assets/img/iccas2020_applying.png},
 }
 
