Add paper tab in publications

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,7 +21,7 @@
   year      = {2024},
   abbr={AAAI},
   selected={true},
-  website={https://ojs.aaai.org/index.php/AAAI/article/view/28470/28915},
+  paper={https://ojs.aaai.org/index.php/AAAI/article/view/28470/28915},
   additional_info2={ICCV Workshop on Adversarial Robustness In the Real World (AROW) 2023},
   img_path={assets/img/facl.png},
   equal_contrib={true}
