--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,9 @@
 ---
 ---
+@string{arxiv = {arXiv preprint}}
 
 @string{cvpr = {{IEEE/CVF} Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>)}}
+@string{cvprw = {{IEEE/CVF} Conference on Computer Vision and Pattern Recognition Workshop (<b>CVPR</b>)}}
 @string{iccv = {{IEEE/CVF} International Conference on Computer Vision (<b>ICCV</b>)}}
 @string{iccvw = {{IEEE/CVF} International Conference on Computer Vision Workshop (<b>ICCVW</b>)}}
 @string{eccv = {European Conference on Computer Vision (<b>ECCV</b>)}}
@@ -12,7 +14,20 @@
 @string{iccas = {International Conference on Control, Automation and Systems (<b>ICCAS</b>)}}
 
 
+
 # Selected Papers
+@InProceedings{Cho_2024_arxiv,
+  author    = {Junhyeong Cho and Kim Youwang and Hunmin Yang and Tae-Hyun Oh},
+  title     = {Object-Centric Domain Randomization for 3D Shape Reconstruction in the Wild},
+  booktitle = arxiv,
+  year      = {2024},
+  abbr={arxiv},
+  arxiv={2403.14539},
+  selected={true},
+  website={https://objectdr.github.io/},
+  img_path={assets/img/ObjectDR.png},
+}
+
 @inproceedings{Yang_2024_AAAI,
   author    = {Hunmin Yang* and Jongoh Jeong* and Kuk-Jin Yoon},
   title     = {FACL-Attack: Frequency-Aware Contrastive Learning for Transferable Adversarial Attacks},
