Add comma after arXiv preprint

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,6 @@
 ---
 ---
-@string{arxiv = {arXiv preprint}}
+@string{arxiv = {arXiv preprint, }}
 
 @string{cvpr = {{IEEE/CVF} Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>)}}
 @string{cvprw = {{IEEE/CVF} Conference on Computer Vision and Pattern Recognition Workshop (<b>CVPR</b>)}}
