Add comma before years in publications

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,16 +2,16 @@
 ---
 @string{arxiv = {arXiv preprint, }}
 
-@string{cvpr = {{IEEE/CVF} Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>)}}
-@string{cvprw = {{IEEE/CVF} Conference on Computer Vision and Pattern Recognition Workshop (<b>CVPR</b>)}}
-@string{iccv = {{IEEE/CVF} International Conference on Computer Vision (<b>ICCV</b>)}}
-@string{iccvw = {{IEEE/CVF} International Conference on Computer Vision Workshop (<b>ICCVW</b>)}}
-@string{eccv = {European Conference on Computer Vision (<b>ECCV</b>)}}
-@string{neurips = {Conference on Neural Information Processing Systems (<b>NeurIPS</b>)}}
-@string{aaai = {Association for the Advancement of Artificial Intelligence (<b>AAAI</b>)}}
+@string{cvpr = {{IEEE/CVF} Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), }}
+@string{cvprw = {{IEEE/CVF} Conference on Computer Vision and Pattern Recognition Workshop (<b>CVPR</b>), }}
+@string{iccv = {{IEEE/CVF} International Conference on Computer Vision (<b>ICCV</b>), }}
+@string{iccvw = {{IEEE/CVF} International Conference on Computer Vision Workshop (<b>ICCVW</b>), }}
+@string{eccv = {European Conference on Computer Vision (<b>ECCV</b>), }}
+@string{neurips = {Conference on Neural Information Processing Systems (<b>NeurIPS</b>), }}
+@string{aaai = {Association for the Advancement of Artificial Intelligence (<b>AAAI</b>), }}
 
-@string{gtc = {NVIDIA GPU Technology Conference (<b>GTC</b>)}}
-@string{iccas = {International Conference on Control, Automation and Systems (<b>ICCAS</b>)}}
+@string{gtc = {NVIDIA GPU Technology Conference (<b>GTC</b>), }}
+@string{iccas = {International Conference on Control, Automation and Systems (<b>ICCAS</b>), }}
 
 
 
