--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -36,7 +36,7 @@
   abbr={AAAI},
   selected={true},
   paper={https://ojs.aaai.org/index.php/AAAI/article/view/28470/28915},
-  additional_info2={ICCV Workshop on Adversarial Robustness In the Real World (AROW) 2023},
+  additional_info2={ICCV Workshop on Adversarial Robustness In the Real World (AROW), 2023},
   img_path={assets/img/facl.png},
   equal_contrib={true}
 }
