additional info for CVPR workshop

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -26,6 +26,7 @@
   selected={true},
   website={https://objectdr.github.io/},
   img_path={assets/img/ObjectDR.png},
+  additional_info2={CVPR Workshop on Foundation Models (WFM), 2024},
 }
 
 @inproceedings{Yang_2024_AAAI,
